<resources>
    <string name="app_name">Carrus Driver</string>

    <!--Debuge Key Google Map-->
    <string name="google_api_key">AIzaSyA-KOCI0olKYzAgUDAgp_57VxGIyDbgF-4</string>


    <!--Released Key Google Map-->
<!--    <string name="google_api_key">AIzaSyCHLcN4FVT29tkXZcOSfNRL9C9CKar6d_g</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="driverId">Driver ID</string>
    <string name="submit">Submit</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="login">Login</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="retry">\u00A0<b>Please retry</b></string>
    <string name="internetConnectionError">No internet connection, please try again.</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="sending">Sending...</string>
    <string name="verifying">Verifying...</string>
    <string name="current_shipment">Current Shipment</string>
    <string name="my_profile">My Profile</string>
    <string name="driving_license">Driving License</string>
    <string name="licence_state">License State</string>
    <string name="expires_on">Expires on</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="my_schedule">My Schedule</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="no_upcoming_orders">No upcoming orders.</string>
    <string name="no_past_orders">No past orders.</string>
    <string name="terms_condition">Terms &amp; Conditions\n Privacy Policy</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="loading">Loading...</string>
    <string name="pickup">Pick Up</string>
    <string name="drop_off">Drop Off</string>
    <string name="cargo_details">Cargo Details</string>
    <string name="documents">Documents</string>
    <string name="advisory_checkList">Advisory CheckList</string>
    <string name="notes">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="pod">POD</string>
    <string name="invoice">Invoice</string>
    <string name="consignment">Consignment Notes</string>
    <string name="please_wait">Please wait...</string>
    <string name="indian_rupee_symbol">₹</string>
    <string name="collect_cash">Collect Cash</string>
    <string name="upload_image">Upload image</string>
    <string name="upload_pdf">Upload pdf</string>
    <string name="cancel">Cancel</string>
    <string name="upload_documents">Upload documents</string>
    <string name="unable_to_perform_action">Unable to perform action.</string>
    <string name="select_picture">Select picture</string>
    <string name="upload_new_document">Upload New Document</string>
    <string name="no_upcoming_bookings">No Upcoming Bookings</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="rate_shipper">Rate Shipper</string>
    <string name="add_feedback">Add feedback here...</string>
    <string name="payment_collected">Payment Collected</string>
    <string name="session_expired">Session expired.</string>
    <string name="some_ereor_ocurred">Oops!! Some error occured..</string>
    <string name="no_internet_access">No internet connection.</string>
    <string name="update_app_title">Update found</string>
    <string name="critical_update_message">Critical update found, you have to update the app</string>
    <string name="update_message">Do you want to update the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_notes">Enter notes</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Bookings</item>
        <item>Call Fleet Owner</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon_selector</item>
        <item>@drawable/booking_icon_selector</item>
        <item>@drawable/call_icon_selector</item>
        <item>@drawable/logout_icon_selector</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_booking_details">BookingDetails</string>
    <string name="title_activity_rating_dialog">RatingDialogActivity</string>


    <string name="gps_dialog_title">GPS is settings</string>
    <string name="gps_msg">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_cost">Total Cost</string>
    <string name="crn">CRN</string>
    <string name="type_of_cargo">Type of Cargo</string>
    <string name="weight">Weight</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="give_rating_msg">Please give rating.</string>
    <string name="enter_driver_id_msg">Please enter driver ID.</string>
    <string name="invalid_driver_id">Invalid driver ID.</string>
    <string name="enter_otp_msg">Please enter OTP.</string>
    <string name="invalid_otp">Invalid OTP.</string>
    <string name="uploading_msg">Uploading...</string>
    <string name="please_enter_notes">Please enter notes</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="current_position">Current Position</string>

    <string name="exit_msg">Do you want to exit application?</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="ok">Ok</string>
    <string name="call_carrus">Call Carrus</string>


</resources>
