<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten"
        android:background="@drawable/rounded_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/ten"
            android:src="@mipmap/icon_cross" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rate_shipper"
            android:textColor="@color/blue"
            android:textSize="@dimen/large_font" />

        <RatingBar
            android:id="@+id/ratingStars"
            style="@style/customRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ten"
            android:numStars="5"
            android:stepSize="0.5" />

        <EditText
            android:id="@+id/etComment"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/largehieght"
            android:layout_margin="@dimen/fifteen"
            android:background="@drawable/rounded_edit_text"
            android:gravity="left|top"
            android:hint="@string/add_feedback"
            android:padding="@dimen/ten" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@drawable/bottom_rounded_button_selector"
            android:padding="@dimen/ten"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/mid_fond" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:visibility="gone">

        <include layout="@layout/error_bar_top" />
    </LinearLayout>


</RelativeLayout>