<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="com.carrus.trucker.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/ivAppLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/logo" />

            <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/flipper"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivAppLogo">

                <LinearLayout
                    android:id="@+id/llDriverIdLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etDriverId"
                        style="@android:style/Widget.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/headerheight"
                        android:layout_marginTop="@dimen/fourty"
                        android:animateLayoutChanges="true"
                        android:background="@color/white"
                        android:digits="0123456789"
                        android:drawableLeft="@mipmap/icon_driver"
                        android:drawablePadding="@dimen/ten"
                        android:hint="@string/driverId"
                        android:inputType="number"
                        android:maxLength="6"
                        android:padding="@dimen/ten"
                        android:imeOptions="actionDone"
                        android:textAppearance="@style/CustomTextAppearance"
                        android:textColor="@color/dark_gery"
                        android:textColorHint="@color/dark_gery" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/headerheight"
                        android:animateLayoutChanges="true"
                        android:background="@drawable/login_button_background_selector"
                        android:text="@string/submit"
                        android:textAllCaps="true"
                        android:textAppearance="@style/CustomTextAppearance.NeueMedium"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llOtpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etOTP"
                        style="@android:style/Widget.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/headerheight"
                        android:layout_marginTop="@dimen/fourty"
                        android:animateLayoutChanges="true"
                        android:background="@color/white"
                        android:digits="0123456789"
                        android:drawableLeft="@mipmap/icon_otp"
                        android:drawablePadding="@dimen/ten"
                        android:hint="@string/enterOTP"
                        android:inputType="numberPassword"
                        android:padding="@dimen/ten"
                        android:maxLength="6"
                        android:imeOptions="actionDone"
                        android:textAppearance="@style/CustomTextAppearance"
                        android:textColor="@color/dark_gery"
                        android:textColorHint="@color/dark_gery" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/headerheight"
                        android:animateLayoutChanges="true"
                        android:background="@drawable/login_button_background_selector"
                        android:clickable="true"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textAppearance="@style/CustomTextAppearance.NeueMedium"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvResendOtp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resend_otp"
                        android:textColor="@drawable/change_text_color"
                        android:textSize="@dimen/mid_fond"
                        android:textAppearance="@style/CustomTextAppearance.Bold"
                        android:gravity="center_horizontal"
                        android:background="#70000000"
                        android:padding="@dimen/five"/>
                </LinearLayout>
            </ViewFlipper>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/fifty"
        android:visibility="gone">

        <include layout="@layout/error_bar_top" />
    </LinearLayout>

</RelativeLayout>
