<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DriverProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/driverImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/icon_placeholder"/>

                <TextView
                    android:id="@+id/driverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/CustomTextAppearance.Light"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <RatingBar
                    android:id="@+id/driverRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:layout_marginBottom="10dp"
                    style="@style/customRatingBar"/>
                    <!--android:progressDrawable="@drawable/ratingbarstars"-->
                    <!--/>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/driverId"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/dark_gery"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvDriverId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_gery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/driving_license"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/dark_gery"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvDrivingLicense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_gery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/licence_state"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/dark_gery"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvLicenseState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_gery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/expires_on"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/dark_gery"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvExpiresOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_gery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mobile_number"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/dark_gery"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvMobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textAppearance="@style/CustomTextAppearance"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
